Lesson-7. Refactor. API. Show product
