# product-api/swagger.yaml
@@ -112,6 +112,22 @@ paths:
           $ref: '#/responses/errorResponse'
       tags:
       - products
+    get:
+      description: Return a list of products from the database
+      operationId: showProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productsResponse'
+      tags:
+      - products
     put:
       description: Update a products details
       operationId: updateProduct
